--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "motion": "^12.16.0",
     "next": "15.3.3",
+    "next-themes": "^0.4.6",
     "portfolio": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
